--- a/crates/gatling/Cargo.toml
+++ b/crates/gatling/Cargo.toml
@@ -2,6 +2,7 @@
 name = "gatling"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 homepage = "https://github.com/keep-starknet-strange/gomu-gomu-no-gatling"
 repository = "https://github.com/keep-starknet-strange/gomu-gomu-no-gatling"
 categories = ["command-line", "benchmark", "asynchronous"]
