✨ add clap and config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ authors = ["Exploration Team @ StarkWare <@keep-starknet-strange>"]
 edition = "2021"
 repository = "https://github.com/keep-starknet-strange/gomu-gomu-no-gatling"
 
+[profile.dev.package.backtrace]
+opt-level = 3
