--- a/crates/gatling/Cargo.toml
+++ b/crates/gatling/Cargo.toml
@@ -11,7 +11,22 @@ description = "Gomu Gomu No Gatling is a blazing fast tool to benchmark Starknet
 readme = "README.md"
 
 [dependencies]
+# Starknet dependencies
+starknet = "0.4.0"
+
 env_logger = "0.10.0"
 log = "0.4.17"
 tokio = { version = "1", features = ["full"] }
-thiserror = "1.0.40"
+clap = { version = "4.2.7", features = ["derive"] }
+color-eyre = "0.6.2"
+config = "0.13.3"
+dotenv = "0.15.0"
+serde = "1.0.163"
+serde_derive = "1.0.163"
+serde_json = { version = "1.0.96", features = ["preserve_order"] }
+url = "2.4.0"
+
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false                                            # Disable features which are enabled by default
+features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
