--- a/crates/gatling/Cargo.toml
+++ b/crates/gatling/Cargo.toml
@@ -25,6 +25,7 @@ serde = "1.0.163"
 serde_derive = "1.0.163"
 serde_json = { version = "1.0.96", features = ["preserve_order"] }
 url = "2.4.0"
+rand = { version = "0.8.5", features = ["rand_chacha"] }
 
 [dev-dependencies.cargo-husky]
 version = "1"
