--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,30 @@
-[workspace]
-members = ["crates/gatling"]
-
-[workspace.package]
-authors = ["Exploration Team @ StarkWare <@keep-starknet-strange>"]
+[package]
+name = "gatling"
+version = "0.1.3"
 edition = "2021"
+license = "MIT"
+authors = ["Exploration Team @ StarkWare <@keep-starknet-strange>"]
 repository = "https://github.com/keep-starknet-strange/gomu-gomu-no-gatling"
+categories = ["command-line-interface", "command-line-utilities"]
+keywords = ["starknet", "cairo"]
+description = "Gomu Gomu No Gatling is a blazing fast tool to benchmark Starknet sequencers."
 
 [profile.dev.package.backtrace]
 opt-level = 3
+
+[dependencies]
+# Starknet dependencies
+starknet = "0.4.0"
+
+env_logger = "0.10.0"
+log = "0.4.17"
+tokio = { version = "1", features = ["full"] }
+clap = { version = "4.2.7", features = ["derive"] }
+color-eyre = "0.6.2"
+config = "0.13.3"
+dotenv = "0.15.0"
+serde = "1.0.163"
+serde_derive = "1.0.163"
+serde_json = { version = "1.0.96", features = ["preserve_order"] }
+url = "2.4.0"
+rand = { version = "0.8.5", features = ["rand_chacha"] }
