--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,9 +1,10 @@
 rpc:
-  url: "https://sharingan.madara.zone"
+  url: "http://localhost:9944"
 
 simulation:
   fail_fast: true
   setup:
     create_accounts:
       num_accounts: 10
-      seed: 0
+      seed: 1
+      
