--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,4 @@ serde_derive = "1.0.163"
 serde_json = { version = "1.0.96", features = ["preserve_order"] }
 url = "2.4.0"
 rand = { version = "0.8.5", features = ["rand_chacha"] }
+lazy_static = "1.4.0"
