--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ opt-level = 3
 
 [dependencies]
 # Starknet dependencies
-starknet = "0.4.0"
+starknet = "0.5.0"
 
 env_logger = "0.10.0"
 log = "0.4.17"
@@ -29,3 +29,6 @@ serde_json = { version = "1.0.96", features = ["preserve_order"] }
 url = "2.4.0"
 rand = { version = "0.8.5", features = ["rand_chacha"] }
 lazy_static = "1.4.0"
+colored = "2.0.4"
+sysinfo = "0.29.8"
+statrs = "0.16.0"
