--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,5 +1,8 @@
 name: 'Gomu Gomu no Gatling'
 description: 'Run Gomu Gomu no Gatling to benchmark Starknet Sequencers'
+branding:
+  icon: 'activity-circle'
+  color: 'orange'
 inputs:
   config_path:
     description: 'Path to the configuration file'
