--- a/.github/workflows/rust-build.yml
+++ b/.github/workflows/rust-build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   rust_build:
-    runs-on: ubuntu-latest-32-cores
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
