--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -1,14 +1,14 @@
-name: 'Gomu Gomu no Gatling'
-description: 'Run Gomu Gomu no Gatling to benchmark Starknet Sequencers'
+name: "Gomu Gomu no Gatling"
+description: "Run Gomu Gomu no Gatling to benchmark Starknet Sequencers"
 branding:
-  icon: 'activity-circle'
-  color: 'orange'
+  icon: "activity-circle"
+  color: "orange"
 inputs:
   config_path:
-    description: 'Path to the configuration file'
+    description: "Path to the configuration file"
     required: true
 runs:
-  using: 'composite'
+  using: "composite"
   steps:
     - run: cargo build --release
       shell: bash
