--- a/.github/workflows/binaries-build.yml
+++ b/.github/workflows/binaries-build.yml
@@ -60,12 +60,18 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y g++-aarch64-linux-gnu libc6-dev-arm64-cross
-          export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
-          export CC_aarch64_unknown_linux_gnu=aarch64-linux-gnu-gcc
-          export CXX_aarch64_unknown_linux_gnu=aarch64-linux-gnu-g+
 
       - name: Build binaries
+        if: matrix.build != 'aarch64-unknown-linux-gnu'
         run: cargo build --release --target ${{ matrix.build }}
+
+      - name: Build (aarch64-unknown-linux-gnu)
+        if: matrix.build == 'aarch64-unknown-linux-gnu'
+        run: |
+          export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=/usr/bin/aarch64-linux-gnu-gcc
+          export CC_aarch64_unknown_linux_gnu=/usr/bin/aarch64-linux-gnu-gcc
+          export CXX_aarch64_unknown_linux_gnu=/usr/bin/aarch64-linux-gnu-g++
+          cargo build --release --target ${{ matrix.build }}
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
