--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -10,7 +10,9 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: cargo build --release
+    - run: wget https://github.com/keep-starknet-strange/gomu-gomu-no-gatling/releases/download/v0.0.2-1-alpha/x86_64-unknown-linux-gnu-gatling -O gatling
       shell: bash
-    - run: ./target/release/gatling shoot --c ${{ inputs.config_path }}
+    - run: chmod +x gatling
+      shell: bash
+    - run: ./gatling shoot --c ${{ inputs.config_path }}
       shell: bash
