--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ starknet = "0.6.0"
 env_logger = "0.10.0"
 log = "0.4.17"
 tokio = { version = "1", features = ["full"] }
+futures = "0.3"
 clap = { version = "4.2.7", features = ["derive"] }
 color-eyre = "0.6.2"
 config = "0.13.3"
