--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ opt-level = 3
 # Starknet dependencies
 starknet = "0.6.0"
 
+num_cpus = "1.0"
 env_logger = "0.10.0"
 log = "0.4.17"
 tokio = { version = "1", features = ["full"] }
