--- a/config/sharingan.yaml
+++ b/config/sharingan.yaml
@@ -22,7 +22,7 @@ run:
 
 report:
   num_blocks: 4
-  reports_dir: "reports"
+  location: "report"
 
 # need to add an adress and signing key on sharingan network
 deployer:
