--- a/config/default.yaml
+++ b/config/default.yaml
@@ -18,8 +18,12 @@ setup:
 run:
   num_erc20_transfers: 1000
   num_erc721_mints: 1000
-  num_get_events: 1000
-  concurrency: 5
+  num_get_events: 100
+  concurrency: 10
+
+# read_metrics:
+#   get_events:
+#     parameters_loc: "params.json"
 
 report:
   num_blocks: 4
