--- a/config/katana.yaml
+++ b/config/katana.yaml
@@ -16,10 +16,14 @@ setup:
   chain_id: "KATANA"
 
 run:
+  concurrency: 5
   num_erc20_transfers: 300
   num_erc721_mints: 300
-  num_get_events: 100
-  concurrency: 5
+  read_benches:
+    - name: "Get Events"
+      num_requests: 100
+      method: "starknet_getEvents"
+      parameters_location: "config/read_params/get_events.json"
 
 report:
   num_blocks: 4
