--- a/config/sharingan.yaml
+++ b/config/sharingan.yaml
@@ -16,10 +16,13 @@ setup:
   chain_id: "SN_GOERLI"
 
 run:
+  concurrency: 5
   num_erc20_transfers: 1200
   num_erc721_mints: 1200
-  num_get_events: 100
-  concurrency: 5
+  - name: "Get Events"
+      num_requests: 100
+      method: "starknet_getEvents"
+      parameters_location: "config/read_params/get_events.json"
 
 report:
   num_blocks: 4
