--- a/config/v2.1.0.yaml
+++ b/config/v2.1.0.yaml
@@ -22,10 +22,13 @@ setup:
   chain_id: "SN_GOERLI"
 
 run:
+  concurrency: 5
   num_erc20_transfers: 100
   num_erc721_mints: 100
-  num_get_events: 100
-  concurrency: 5
+  - name: "Get Events"
+      num_requests: 100
+      method: "starknet_getEvents"
+      parameters_location: "config/read_params/get_events.json"
 
 report:
   num_blocks: 3
