--- a/config/sharingan.yaml
+++ b/config/sharingan.yaml
@@ -19,7 +19,8 @@ run:
   concurrency: 5
   num_erc20_transfers: 1200
   num_erc721_mints: 1200
-  - name: "Get Events"
+  read_benches:
+    - name: "Get Events"
       num_requests: 100
       method: "starknet_getEvents"
       parameters_location: "config/read_params/get_events.json"
