--- a/config/v2.1.0.yaml
+++ b/config/v2.1.0.yaml
@@ -25,7 +25,8 @@ run:
   concurrency: 5
   num_erc20_transfers: 100
   num_erc721_mints: 100
-  - name: "Get Events"
+  read_benches:
+    - name: "Get Events"
       num_requests: 100
       method: "starknet_getEvents"
       parameters_location: "config/read_params/get_events.json"
