--- a/config/default.yaml
+++ b/config/default.yaml
@@ -17,8 +17,11 @@ setup:
 
 run:
   concurrency: 5
-  num_erc20_transfers: 5000
-  num_erc721_mints: 5000
+  shooters:
+    - name: "transfer"
+      shoot: 5000
+    - name: "mint"
+      shoot: 5000
   read_benches:
     - name: "Get Events"
       num_requests: 100
