--- a/config/v2.1.0.yaml
+++ b/config/v2.1.0.yaml
@@ -23,8 +23,11 @@ setup:
 
 run:
   concurrency: 5
-  num_erc20_transfers: 100
-  num_erc721_mints: 100
+  shooters:
+    - name: "transfer"
+      shoot: 100
+    - name: "mint"
+      shoot: 100
   read_benches:
     - name: "Get Events"
       num_requests: 100
