--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,24 +13,27 @@ description = "Gomu Gomu No Gatling is a blazing fast tool to benchmark Starknet
 opt-level = 3
 
 [dependencies]
-# Starknet dependencies
-starknet = "0.6.0"
+# Starknet dependencies, currently the same starknet revision as the one in
+# madara https://github.com/keep-starknet-strange/madara/blob/main/Cargo.toml#L268
+starknet = { git = "https://github.com/xJonathanLEI/starknet-rs.git", rev = "2d59636911628260fa460179010bbd00e89de06e" }
 
 goose = "0.17.2"
-env_logger = "0.10.0"
-log = "0.4.17"
+env_logger = "0.11.3"
+log = "0.4.21"
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
-clap = { version = "4.2.7", features = ["derive"] }
-color-eyre = "0.6.2"
-config = "0.13.3"
+clap = { version = "4.5.4", features = ["derive"] }
+color-eyre = "0.6.3"
+config = "0.14.0"
 dotenvy = "0.15.7"
-serde = "1.0.163"
-serde_derive = "1.0.163"
-serde_json = { version = "1.0.96", features = ["preserve_order"] }
-url = "2.4.0"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = { version = "1.0.117", features = ["preserve_order"] }
+url = "2.5.0"
 rand = { version = "0.8.5", features = ["rand_chacha"] }
 lazy_static = "1.4.0"
-colored = "2.0.4"
-sysinfo = "0.29.8"
+sysinfo = "0.30.12"
 crossbeam-queue = "0.3.11"
+
+[features]
+default = []
+with_sps = []
