--- a/config/v2.1.0.yaml
+++ b/config/v2.1.0.yaml
@@ -22,9 +22,17 @@ setup:
   chain_id: "SN_GOERLI"
 
 run:
-  num_erc20_transfers: 100
-  num_erc721_mints: 100
   concurrency: 5
+  shooters:
+    - name: "transfer"
+      shoot: 100
+    - name: "mint"
+      shoot: 100
+  read_benches:
+    - name: "Get Events"
+      num_requests: 100
+      method: "starknet_getEvents"
+      parameters_location: "config/read_params/get_events.json"
 
 report:
   num_blocks: 3
